Server - Fixes, Client - Basic display of requests
