# server/types/relationship.types.go
@@ -5,8 +5,10 @@ type RelationshipInviteDTO struct {
 }
 
 type RelationshipResponseItem struct {
-	ID     uint `json:"id" validate:"required"`
-	UserID uint `json:"user_id" validate:"required"`
+	ID       uint   `json:"id" validate:"required"`
+	UserID   uint   `json:"user_id" validate:"required"`
+	Username string `json:"username" validate:"required"`
+	Online   bool   `json:"online"`
 }
 
 type RelationshipResponse struct {
